# Ring-Up

./: .env  .gitignore  README.md  pyproject.toml  ring-up.py  setup.py  util.py
docs/: ClassDiagram.drawio
ring_up/: constants.py  models.py
src/ringup/: __init__.py  application.py  gui.py  mainmenu.py  models.py  product.py  settings.py  views.py  widgets.py
src/ringup/lib/: formula.py  log.py  observables.py  util.py
src/ringup_bsolis19/: application.py  models.py  settings.py  views.py  widgets.py
tests/func/: test_product_driver.py  test_product_manager.py
tests/unit/: test_models.py
